[gd_scene load_steps=3 format=3 uid="uid://cpaqel1cp43mu"]

[ext_resource type="Script" uid="uid://bww1ojda1hb7p" path="res://scripts/MainHub.gd" id="1_psyej"]
[ext_resource type="Texture2D" uid="uid://dhe3w5g1orqgn" path="res://assets/tinker_arena_background.jpg" id="2_bg"]

[node name="MainHub" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_psyej")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_bg")
expand_mode = 1
stretch_mode = 5

[node name="Header" type="Control" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 80.0
grow_horizontal = 2

[node name="SucataLabel" type="Label" parent="Header"]
layout_mode = 0
offset_left = 164.0
offset_top = 14.0
offset_right = 414.0
offset_bottom = 44.0
text = "‚öôÔ∏è Sucata: 0"

[node name="FundicaoButton" type="Button" parent="."]
layout_mode = 0
offset_left = 92.0
offset_top = 415.0
offset_right = 440.0
offset_bottom = 485.0
text = "üè≠ FUNDI√á√ÉO"

[node name="OficinaButton" type="Button" parent="."]
layout_mode = 0
offset_left = 756.0
offset_top = 685.0
offset_right = 1041.0
offset_bottom = 755.0
text = "üîß OFICINA"

[node name="ArsenalButton" type="Button" parent="."]
layout_mode = 0
offset_left = 1358.0
offset_top = 410.0
offset_right = 1659.0
offset_bottom = 487.0
text = "‚öôÔ∏è ARSENAL"

[node name="BancadaButton" type="Button" parent="."]
layout_mode = 0
offset_left = 83.0
offset_top = 890.0
offset_right = 502.0
offset_bottom = 960.0
text = "üõ†Ô∏è BANCADA"

[node name="CombatButton" type="Button" parent="."]
layout_mode = 0
offset_left = 1271.0
offset_top = 911.0
offset_right = 1671.0
offset_bottom = 981.0
text = "‚öîÔ∏è COMBATE 2v2"
